# B.U.D.D.Y-Mark-67

./: .env.example  .gitignore  LICENSE  README.md  _benchmark_dispatch.py  _test_all.txt  _test_br.txt  _test_mcp_live.py  _test_phase3.txt  _test_results.txt  _test_safety.txt  _test_voice_routing.py  _verify_mcp.py  app_bootstrap.py  buddy.spec  buddy_logging.py  check_ide.py  fix.py  fix_error_handler.py  fix_executor.py  generate_browser_tools.py  main.py  main_original.py  probe_paths.py  pyproject.toml  requirements.txt  setup.py  setup_buddy.py  test_core.py  ui.py
BUDDY-Mobile/: App.tsx  app.json  package-lock.json  package.json
actions/: __init__.py  access_monitor.py  antivirus_manager.py  app_optimizer.py  audio_recorder.py  backup_manager.py  base.py  bluetooth_manager.py  browser_control.py  camera_capture.py  clipboard_manager.py  code_helper.py  computer_control.py  computer_settings.py  desktop.py  dev_agent.py  disk_analyzer.py  email_client.py  env_vars_manager.py  file_controller.py  file_searcher.py  firewall_manager.py  flight_finder.py  game_updater.py  hardware_diagnostics.py  hardware_monitor.py  ide_tracker.py  image_editor.py  keyboard_controller.py  maintenance_manager.py  mcp_controller.py  media_player.py  mouse_controller.py  network_monitor.py  network_security.py  notes_manager.py  notification_sender.py  open_app.py  password_generator.py  pdf_manager.py  (+32 more)
agent/: budget.py  checkpoint_manager.py  dp_brain.py  dp_core.py  error_handler.py  executor.py  intent_compiler.py  journal.py  kernel.py  llm_gateway.py  metrics.py  models.py  openrouter_client.py  path_optimizer.py  personality.py  planner.py  policy.py  repair_engine.py  reward_engine.py  rollback.py  runtime.py  safety.py  screen_workflow.py  state_encoder.py  task_queue.py  telegram_bot.py  verifier.py  voice.py  watchdog.py  workflow_memory.py  workflow_recipes.py
benchmarks/: __init__.py  harness.py  scenarios.py
career/: __init__.py  application_drafter.py  approval_gate.py  github_manager.py  job_search.py  linkedin_agent.py  models.py  orchestrator.py  referral_finder.py  workflow_recipes.py
config/: __init__.py  api_keys.example.json  runtime.py
core/: __init__.py  async_queues.py  console.py  prompt.txt
dashboard-v2/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard_v2/: __init__.py  bridge.py  ui_facade.py
docs/: PROMPTS.md
memory/: config_manager.py  consolidator.py  dp_brain.sqlite3  dp_store.py  embeddings.py  long_term.json.bak  memory_manager.py  policy.py  profiles.py  rag_indexer.py  schema.py
registries/: aliases.py  capability_registry.py  domain_index.py  legacy_aliases.py  tool_manifest.py
remotion-dashboard/: package-lock.json  package.json
scripts/: __init__.py  generate_real_browser_tools.py  ship_ready_check.py
tests/: conftest.py  test_async_queues.py  test_benchmark_harness.py  test_bootstrap.py  test_budget_rollback.py  test_career_orchestrator.py  test_config_runtime.py  test_console.py  test_content_safety.py  test_dashboard_bridge.py  test_dp_exact_hit.py  test_dp_partial_resume.py  test_dp_resilience.py  test_embeddings.py  test_executor.py  test_executor_registry.py  test_gemini_fallback_provider.py  test_intent_compiler.py  test_kali_adapter.py  test_kernel_health.py  test_llm_gateway.py  test_main_audio_playback.py  test_main_stt_helpers.py  test_memory_policy.py  test_memory_tiers.py  test_negative_cache.py  test_nvidia_nim.py  test_openrouter_client.py  test_permission_scopes.py  (+22 more)
(+717 files in other folders)
