[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-mk67"
version = "1.0.0"
description = "B.U.D.D.Y Mark LXVII — Windows-first autonomous desktop AI assistant with supervised runtime execution."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Sirius" }
]
dependencies = [
  # Core AI & LLM
  "google-genai>=1.0",
  "google-generativeai>=0.8",
  "pydantic>=2.0",

  # Voice & Audio
  "sounddevice>=0.4",
  "pyaudio>=0.2.14",
  "pyttsx3>=2.90",
  "keyboard>=0.13",

  # Computer Vision & Screen
  "opencv-python>=4.8",
  "numpy>=1.26",
  "mss>=9.0",
  "pillow>=10.0",

  # Browser & Web
  "playwright>=1.40",
  "requests>=2.33.1,<3",
  "beautifulsoup4>=4.12",
  "duckduckgo-search>=6.0",

  # Desktop Automation
  "pyautogui>=0.9",
  "pyperclip>=1.8",
  "pygetwindow>=0.0.9",
  "pywinauto>=0.6; platform_system == 'Windows'",

  # System & OS
  "psutil>=5.9",
  "comtypes>=1.4; platform_system == 'Windows'",
  "pycaw>=20240210; platform_system == 'Windows'",
  "send2trash>=1.8",

  # Memory & RAG
  "chromadb>=0.4",
  "sentence-transformers>=2.2",

  # Document Processing
  "PyPDF2>=3.0",
  "docx2txt>=0.8",

  # Communication
  "python-telegram-bot>=21.0",

  # UI
  "PyQt6>=6.6",

  # Security
  "cryptography>=42.0",

  # Media
  "youtube-transcript-api>=0.6",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[project.scripts]
buddy = "main:main"
buddy-ship-check = "scripts.ship_ready_check:main"

[tool.setuptools]
py-modules = ["main", "ui", "app_bootstrap", "buddy_logging"]

[tool.setuptools.packages.find]
include = ["actions*", "agent*", "config*", "core*", "dashboard_v2*", "memory*", "voice*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
